--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.html
@@ -22,8 +22,15 @@
             <mat-label>Placa del Vehiculo</mat-label>
             <input matInput placeholder="Placa del Vehiculo" formControlName="placaVehiculo" />
             <mat-error *ngIf="obtenerControlCampo('placaVehiculo')?.errors?.['required']">
-              La placa es obligatoria.
+              La categoría es obligatoria.
             </mat-error>
+            <mat-error *ngIf="form.get('placaVehiculo')?.invalid">
+              {{ form.get('placaVehiculo')!.errors?.['minlength'] ? 'El campo debe tener 6 caracteres' : 
+                 (form.get('placaVehiculo')!.errors?.['maxlength'] ? 'El campo no puede tener más de 6 caracteres' :
+                 (form.get('placaVehiculo')!.errors?.['pattern'] ? 'El campo debe tener el formato AA0000' : '')) }}
+            </mat-error>
+            
+            
           </mat-form-field>
           <!-- Categoria sección -->
           <mat-form-field class="example-full-width">
@@ -59,7 +66,7 @@
                 }}</mat-option>
             </mat-select>
             <mat-error *ngIf="obtenerControlCampo('tamanioVehiculo')?.errors?.['required']">
-              La marca es obligatoria.
+              El tamaño del vehículo es obligatorio.
             </mat-error>
           </mat-form-field>
 
@@ -67,10 +74,15 @@
           <mat-form-field class="example-full-width">
             <mat-label>Tarjeta de Propiedad</mat-label>
             <input matInput placeholder="Tarjeta de Propiedad" formControlName="tarjetaPropiedadVehiculo" />
-            <mat-error *ngIf="obtenerControlCampo('tarjetaPropiedadVehiculo')?.errors?.['required']">
-              La tarjeta de propiedad es obligatoria.
+            <mat-error *ngIf="obtenerControlCampo('tarjetaPropiedadVehiculo')?.errors?.['required'] || 
+                obtenerControlCampo('tarjetaPropiedadVehiculo')?.errors?.['invalidTarjetaPropiedad']">
+
+                {{ obtenerControlCampo('tarjetaPropiedadVehiculo')!.errors?.['required'] ? 'La tarjeta de propiedad es obligatoria.' :
+                 obtenerControlCampo('tarjetaPropiedadVehiculo')!.errors?.['invalidTarjetaPropiedad'] ? 'La tarjeta de propiedad debe tener 12 dígitos y ser numérica.' : '' }}
             </mat-error>
           </mat-form-field>
+
+
         </div>
         <div class="secciones">
           <h2>COLOR</h2>
@@ -78,7 +90,7 @@
           <!-- Color sección -->
           <mat-form-field class="example-full-width">
             <mat-label>Color del vehículo</mat-label>
-            <input matInput placeholder="Color del vehículo" formControlName="colorVehiculo" />
+            <input matInput placeholder="Color del vehículo" formControlName="colorVehiculo" readonly="true" />
             <mat-error *ngIf="obtenerControlCampo('colorVehiculo')?.errors?.['required']">
               El color es obligatorio.
             </mat-error>
@@ -92,7 +104,7 @@
           <!-- IMAGEN sección -->
           <mat-form-field class="example-full-width">
             <mat-label>Imagen del vehículo</mat-label>
-            <input matInput placeholder="Imagen del vehículo" formControlName="imagenVehiculo" />
+            <input matInput placeholder="Imagen del vehículo" formControlName="imagenVehiculo"  />
             <mat-error *ngIf="obtenerControlCampo('imagenVehiculo')?.errors?.['required']">
               la Imagen es obligatorio.
             </mat-error>
