--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
@@ -24,6 +24,12 @@
                 >
                   El nombre es obligatorio.
                 </mat-error>
+                <mat-error *ngIf="form.get('nombre')?.invalid">
+                  {{
+                    form.get('nombre')!.errors?.['pattern'] ? 'El campo no debe tener números' : 
+                    (form.get('nombre')!.errors?.['maxlength'] ? 'El campo no puede tener más de 50 caracteres' : '')
+                  }}
+                </mat-error>
               </mat-form-field>
 
               <div class="sub-seccion">
@@ -34,11 +40,20 @@
                     placeholder="correo"
                     formControlName="correo"
                   />
-                  <mat-error
+                  <!--<mat-error
                     *ngIf="obtenerControlCampo('correo')?.errors?.['required']"
                   >
                     El correo es obligatorio.
+                  </mat-error>-->
+                  <mat-error *ngIf="form.get('correo')?.invalid">
+                    {{
+                      form.get('correo')!.errors?.['required'] ? 'El correo es obligatorio' :
+                      (form.get('correo')!.errors?.['email'] ? 'sigue el formato de ---@---' :
+                      (form.get('correo')!.errors?.['pattern'] ? 'el correo debe tener un punto por lo menos' :
+                      (form.get('correo')!.errors?.['maxlength'] ? 'El correo no puede tener más de 100 caracteres' : '')))
+                    }}
                   </mat-error>
+                  
                 </mat-form-field>
                 <mat-form-field class="example-full-width">
                   <mat-label>telefono</mat-label>
@@ -47,10 +62,12 @@
                     placeholder="telefono"
                     formControlName="telefono"
                   />
-                  <mat-error
-                    *ngIf="obtenerControlCampo('telefono')?.errors?.['required']"
-                  >
-                    El telefono es obligatorio.
+              
+                  <mat-error *ngIf="form.get('telefono')?.invalid">
+                    {{
+                      form.get('telefono')!.errors?.['required'] ? 'El telefono es obligatorio' :
+                      (form.get('telefono')!.errors?.['pattern'] ? 'Debe ser un número de 9 dígitos' :'')
+                    }}
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -78,10 +95,12 @@
                   placeholder="username"
                   formControlName="username"
                 />
-                <mat-error
-                  *ngIf="obtenerControlCampo('username')?.errors?.['required']"
-                >
-                  El username es obligatorio.
+                
+                <mat-error *ngIf="form.get('username')?.invalid">
+                  {{
+                    form.get('username')!.errors?.['required'] ? 'El username es obligatorio' :
+                    (form.get('username')!.errors?.['maxlength'] ? 'El username no puede tener más de 50 caracteres' : '')
+                  }}
                 </mat-error>
               </mat-form-field>
             </div>
@@ -94,20 +113,24 @@
                   placeholder="apellido"
                   formControlName="apellido"
                 />
-                <mat-error
-                  *ngIf="obtenerControlCampo('apellido')?.errors?.['required']"
-                >
-                  El apellido es obligatorio.
+                <mat-error *ngIf="form.get('apellido')?.invalid">
+                  {{
+                    form.get('apellido')!.errors?.['required'] ? 'El apellido es obligatorio' :
+                    (form.get('apellido')!.errors?.['pattern'] ? 'El campo no debe tener números' : 
+                    
+                    (form.get('apellido')!.errors?.['maxlength'] ? 'El apellido no puede tener más de 50 caracteres' : ''))
+                  }}
                 </mat-error>
               </mat-form-field>
               <div class="sub-seccion">
                 <mat-form-field class="example-full-width">
                   <mat-label>dni</mat-label>
                   <input matInput placeholder="dni" formControlName="dni" />
-                  <mat-error
-                    *ngIf="obtenerControlCampo('dni')?.errors?.['required']"
-                  >
-                    El dni es obligatorio.
+                  <mat-error *ngIf="form.get('dni')?.invalid">
+                    {{
+                      form.get('dni')!.errors?.['required'] ? 'El dni es obligatorio' :
+                      (form.get('dni')!.errors?.['pattern'] ? 'El dni ser un número de 8 dígitos' :'')
+                    }}
                   </mat-error>
                 </mat-form-field>
                 <mat-form-field class="example-full-width">
@@ -127,10 +150,11 @@
               <mat-form-field appearance="fill" class="example-full-width">
                 <input
                   matInput
-                  placeholder="Ingrese fecha"
+                  placeholder="Ingrese fecha de nacimiento"
                   [matDatepicker]="picker"
                   formControlName="fechaNacimiento"
                   [max]="maxFecha"
+                  readonly="true"
                 />
                 <mat-hint>MM/DD/YYYY</mat-hint>
                 <mat-datepicker-toggle
@@ -144,7 +168,7 @@
                   La fecha de creación es obligatoria.
                 </mat-error>
               </mat-form-field>
-              <mat-form-field class="example-full-width">
+              <!--<mat-form-field class="example-full-width">
                 <mat-label>password</mat-label>
                 <input
                   matInput
@@ -156,12 +180,24 @@
                 >
                   El password es obligatorio.
                 </mat-error>
-              </mat-form-field>
+              </mat-form-field>-->
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'" formControlName="password" required>
+                <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <mat-hint *ngIf="!passwordInput?.value">La contraseña es obligatoria</mat-hint>
+                <mat-error *ngIf="form.get('password')?.invalid">
+                  {{
+                    form.get('password')!.errors?.['required'] ? 'El password es obligatorio' :
+                    (form.get('password')!.errors?.['maxlength'] ? 'El password debe ser menos de 200 dígitos' : '')
+                  }}
+                </mat-error>                
+                </mat-form-field>
+                
             </div>
             <div class="secciones">
               <mat-form-field class="example-full-width">
                 <mat-label>imagen</mat-label>
-                <input matInput placeholder="imagen" formControlName="imagen" />
+                <input matInput placeholder="imagen" formControlName="imagen" readonly="true"/>
                 <mat-error
                   *ngIf="obtenerControlCampo('imagen')?.errors?.['required']"
                 >
